<resources>
    <string name="app_name">WearOS Bluetooth ADB Bridge</string>
    <string name="subtitle">Manually start Wear OS 3 Bluetooth ADB service</string>
    <string name="device_picker_title">Target Device</string>
    <string name="expose_tcp_title">Enable TCP Listening</string>
    <string name="refresh_devices">Refresh Devices</string>
    <string name="start_service">Start Bridge</string>
    <string name="stop_service">Stop</string>
    <string name="force_stop_service">Force Stop</string>
    <string name="status_title">Connection Status</string>
    <string name="endpoint_title">Endpoint Info</string>
    <string name="endpoint_section_expand">Endpoint Info</string>
    <string name="endpoint_section_collapse">Endpoint Info (Collapsed)</string>
    <string name="instructions_title">Connection Commands</string>
    <string name="instructions_section_expand">Connection Commands</string>
    <string name="instructions_section_collapse">Connection Commands (Collapsed)</string>
    <string name="error_title">Recent Error</string>
    <string name="current_device_label">Current Device</string>
    <string name="local_socket_label">Local Bridge</string>
    <string name="tcp_endpoint_label">TCP Endpoint</string>
    <string name="service_starting">Service is starting</string>
    <string name="service_running">Service is running</string>
    <string name="service_stopping">Service is stopping</string>
    <string name="service_stopped">Service has stopped</string>
    <string name="service_fault">Service error, please check output below</string>
    <string name="service_stop_timeout">Stop timed out, tap "Force Stop"</string>
    <string name="host_label">Host</string>
    <string name="target_label">Target</string>
    <string name="no_device_selected">No device selected</string>
    <string name="no_paired_devices">No paired Bluetooth devices found</string>
    <string name="unnamed_device">Unnamed Device</string>
    <string name="bluetooth_not_supported">Bluetooth is not supported on this phone</string>
    <string name="permission_required_for_devices">[Please grant Nearby Devices permission first]</string>
    <string name="permission_ready">Permissions ready, connection available</string>
    <string name="permission_missing">Missing %1$s permission</string>
    <string name="permission_denied_message">Permission not granted, cannot continue Bluetooth bridge.</string>
    <string name="permission_nearby_devices">Nearby Devices</string>
    <string name="permission_bluetooth_connect">Bluetooth Connect</string>
    <string name="permission_notifications">Notifications</string>
    <string name="tcp_port_label">TCP Port</string>
    <string name="tcp_port_invalid">Please enter a port between 1 and 65535</string>
    <string name="tcp_disabled">Disabled</string>
    <string name="tcp_waiting_for_network">Waiting for network, preparing to listen on 0.0.0.0:%1$d</string>
    <string name="instructions_classic_title">&gt; Traditional Wired Connection</string>
    <string name="instructions_tcp_title">&gt; LAN Wireless Method</string>
    <string name="endpoint_copy">Copy Endpoint Info</string>
    <string name="instructions_copy">Copy Connection Commands</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="notification_title">Wear OS Bluetooth ADB is running</string>
    <string name="notification_channel_name">Wear OS Bluetooth ADB</string>
    <string name="notification_channel_description">Keep Bluetooth ADB bridge service running in background</string>
    <string name="notification_device">Device: %1$s</string>
    <string name="notification_local_socket">Local Socket: localabstract:%1$s</string>
    <string name="notification_tcp_disabled">TCP: Disabled</string>
    <string name="notification_tcp_pending">TCP: Waiting for network, listening on 0.0.0.0:%1$d</string>
    <string name="notification_tcp_ready">TCP: %1$s:%2$d</string>
    <string name="notification_error">Error: %1$s</string>
    <string name="endpoint_status_disconnected">Disconnected</string>
    <string name="endpoint_status_connecting">Connecting</string>
    <string name="endpoint_status_connected">Connected</string>
    <string name="endpoint_status_error">Connection Failed</string>
    <string name="endpoint_detail_bluetooth_handshake">Bluetooth Handshake</string>
    <string name="error_no_bluetooth_adapter_short">Bluetooth Not Supported</string>
    <string name="error_no_bluetooth_adapter">No Bluetooth adapter is available on this phone.</string>
    <string name="error_missing_bluetooth_connect_permission">Missing Bluetooth Connect permission</string>
    <string name="error_invalid_device_address_short">Invalid Device Address</string>
    <string name="error_invalid_device_address">Unable to parse Bluetooth address %1$s.</string>
    <string name="error_bluetooth_adapter_unavailable">Bluetooth adapter is unavailable</string>
    <string name="error_missing_nearby_devices_permission_scan">Missing Nearby Devices permission, cannot cancel Bluetooth discovery.</string>
    <string name="error_handshake_failed">Handshake Failed</string>
    <string name="error_tcp_port_in_use">TCP port %1$d is already in use.</string>
    <string name="error_bluetooth_access_denied">System denied Bluetooth access.</string>
    <string name="error_connection_closed">Connection closed.</string>
    <string name="error_socket_closed">Socket closed.</string>
    <string name="error_io_failed">I/O read/write failed.</string>
    <string name="watch_install_warning">If your watch\'s developer options have the ability to turn on \"Debug over Bluetooth\", then you can use this tool directly on your phone to debug the watch.\n If your watch does not support this feature, then installing this app on the watch won\'t help either.</string>
    <string name="open_on_phone">Open download page on phone</string>
    <string name="uninstall">Uninstall from watch</string>
</resources>
